--- a/7030-founder-box-only/package.json
+++ b/7030-founder-box-only/package.json
@@ -3,30 +3,9 @@
   "private": true,
   "scripts": {
     "dev:founder": "pnpm --filter founder-box dev",
-    "build": "pnpm -w build",
+    "build": "pnpm --filter founder-box build",
     "start:founder": "pnpm --filter founder-box start",
-    "prisma:gen": "pnpm dlx prisma generate",
-    "prisma:migrate": "pnpm dlx prisma migrate dev -n init"
-  },
-  "devDependencies": {
-    "prisma": "^5.18.0",
-    "typescript": "^5.6.2",
-    "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.20",
-    "tailwindcss": "^3.4.14",
-    "eslint": "^9.12.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8"
-  },
-  "dependencies": {
-    "next": "14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@prisma/client": "^5.18.0",
-    "zod": "^3.23.8",
-    "three": "^0.169.0",
-    "@react-three/fiber": "^8.16.8",
-    "@react-three/drei": "^9.114.6",
-    "clsx": "^2.1.1"
+    "prisma:gen": "pnpm --filter founder-box exec prisma generate",
+    "prisma:migrate": "pnpm --filter founder-box exec prisma migrate dev -n init"
   }
 }
